# typewhisper

./: .gitignore  README.md  pyproject.toml
src/typewhisper/: __init__.py  cli.py
tests/: test_smoke.py
